interview prepare info

--- a/re_practice.ipynb
+++ b/re_practice.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.6.8-final"
+   "version": "3.6.5-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -18,8 +18,8 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python36864bitf7bd684850044f31a59bb3f7ce0c661b",
-   "display_name": "Python 3.6.8 64-bit"
+   "name": "python36564bitff28b0bc308b43728a982148efad7fb6",
+   "display_name": "Python 3.6.5 64-bit"
   }
  },
  "cells": [
@@ -29,25 +29,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### pro1. Matching a decimal numbers"
+    "### pro1. Matching a decimal numbers\n",
+    "\n",
+    "[link for the test](https://regexone.com/problem/matching_decimal_numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "分若干部分： \n",
+    "\n",
+    "- 第一个部分是要看有没有 + - null 部分 `^[+-]`?\n",
+    "\n",
+    "    - ? --- if they have or not\n",
+    "\n",
+    "    - ^ --- from the beginning\n",
+    "\n",
+    "- 第二个部分选出标点前的数字 \\d+ \n",
+    "\n",
+    "- 第三部分可能有或者没有\n",
+    "\n",
+    "    - 若干的逗号,：前后必有数字 (,\\d+)* --- 以pattern出现或不出现\n",
+    "\n",
+    "    - 唯一个句号.: 前后必有数字 (\\.\\d+)* --- 以pattern出现或不出现\n",
+    "\n",
+    "    - 唯一e：前后必有数字: 前后必有数字 (e\\d+)* --- 以pattern出现或不出现\n",
+    "\n",
+    "- 排除，没有除了e之外的字母"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "['3.14529', '-255.34', '128', '+568.596', '1.9e10', '123,340.00']\n"
+     "text": "[[], [], ['128'], [], [], [], [], [], []]\nind: 0, value: 1 not equal to 3.14529\n"
     }
    ],
    "source": [
     "import re\n",
-    "data = ['3.14529', '-255.34', '128', '+568.596', '1.9e10', '123,340.00', '720p']\n",
-    "res = [re.findall('[\\d\\.,e\\+-]+(?![\\d*a-z]+)', i)[0] for i in data if re.findall('[\\d\\.,e\\+-]+(?![\\d*a-z]+)', i)]\n",
-    "print (res)    "
+    "data = ['3.14529', '-255.34', '128', '+568.596', '1.9e10', '123,340.00', '720p', '123,340,567', '73p89']\n",
+    "std_res = ['3.14529', '-255.34', '128', '+568.596', '1.9e10', '123,340.00', '123,340,567']\n",
+    "# res = [re.findall('(^[+-]?\\d+(,\\d+)*(\\.\\d+)*(e\\d+)*$)', i) for i in data]\n",
+    "res = [re.findall('(^[+-]?\\d+$)', i) for i in data]\n",
+    "print (res)\n",
+    "res = [r[0][0] for r in res if r]\n",
+    "for i, r in enumerate(res): \n",
+    "    if r == std_res[i]: print ('pass')\n",
+    "    else: print ('ind: {i}, value: {v} not equal to {ans}'.format(i = i, v = r, ans = std_res[i]))\n",
+    "\n"
    ]
   },
   {
@@ -60,21 +96,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "目的：拿到电话号码里的区号，如果有国家号，去掉国家号"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "['415', '650', '416', '202', '403', '416']\n"
+     "text": "[['415', '555', '1234'], ['650', '555', '2345'], ['416', '555', '3456'], ['202', '555', '4567'], ['4035555678'], ['1', '416', '555', '9292']]\n"
     }
    ],
    "source": [
     "import re\n",
     "data = ['415-555-1234', '650-555-2345', '(416)555-3456', '202 555 4567', '4035555678', '1 416 555 9292']\n",
     "cor = ['415', '605', '416', '202', '403', '416']\n",
-    "res = [''.join(re.findall('([\\d]+)', i))[-10:-7] for i in data]\n",
+    "\n",
+    "# a = re.compile('[(]?(\\d+)')\n",
+    "res = [re.findall('[(]?(\\d+)', d) for d in data]\n",
+    "\n",
+    "\n",
     "\n",
     "print (res)\n"
    ]
@@ -87,18 +136,22 @@
    "source": [
     "### pro3. Matching emails\n",
     "\n",
-    "- use ^ in the start to just remain the first word"
+    "- use ^ in the start to just remain the first word\n",
+    "\n",
+    "- 将邮箱@前面的名字提取出来，如果提取出来的是有+的，将+之前的名字提取出来\n",
+    "\n",
+    "- res = [re.findall('^([\\w\\.]*)', i) for i in data]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[['tom'], ['tom.riddle'], ['tom.riddle'], ['tom'], ['potter'], ['harry'], ['hermione']]\n"
+     "text": "pass\npass\npass\npass\npass\npass\npass\n"
     }
    ],
    "source": [
@@ -106,8 +159,17 @@
     "data = ['tom@hogwarts.com', 'tom.riddle@hogwarts.com', 'tom.riddle+regexone@hogwarts.com', 'tom@hogwarts.eu.com', 'potter@hogwarts.com', 'harry@hogwarts.com', 'hermione+regexone@hogwarts.com']\n",
     "cor = ['tom', 'tom.riddle', 'tom.riddle', 'tom', 'potter', 'harry', 'hermione']\n",
     "\n",
-    "res = [re.findall('^([\\w\\.]*)', i) for i in data]\n",
-    "print (res)"
+    "# # ans 1\n",
+    "# res = [re.findall('^([\\w\\.]*)', i) for i in data]\n",
+    "\n",
+    "# ans 2\n",
+    "res = [re.findall('(.*?)(\\+.*)?@.*', i) for i in data]\n",
+    "res = [r[0][0] for r in res]\n",
+    "\n",
+    "for i, v in enumerate(res): \n",
+    "    if v == cor[i]: print (\"pass\")\n",
+    "    else: \n",
+    "        print ('ind: {i}, value: {v} not equal to {ans}'.format(i = i, v = v, ans = cor[i]))\n"
    ]
   },
   {
@@ -153,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[], [], [('img0912', 'jpg')], [('updated_img0912', 'png')], [], [('favicon', 'gif')], [], []]\n"
+     "text": "[[], [], [], [('updated_img0912', 'png')], [], [('favicon', 'gif')], [], []]\n"
     }
    ],
    "source": [
@@ -170,7 +232,7 @@
     "cor = [['img0912', 'jpg'], ['updated_img0912', 'png'], ['favicon', 'gif']]\n",
     "\n",
     "res = [re.findall('(.*).(jpg)$|(.*).(gif)$|(.*).(png)$', i) for i in data]\n",
-    "res = [re.findall('(.*)\\.(.*[gf])$', i) for i in data]\n",
+    "res = [re.findall('(.*)\\.(.*[pg][ni][gf])$', i) for i in data]\n",
     "print (res)"
    ]
   },
@@ -184,14 +246,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-46-0a1d09ddc801>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-0a1d09ddc801>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    - greedy mode\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "- greedy mode "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[['The quick brown fox...'], ['jumps over the lazy dog.']]\nyes\nyes\n"
+     "text": "[['The quick brown fox...'], ['jumps over the lazy dog.']]\n[['The quick brown fox... '], ['jumps over the lazy dog.  ']]\n"
     }
    ],
    "source": [
@@ -204,9 +284,19 @@
     "res = [re.findall('^\\s*(.*?)\\s*$', i) for i in data]\n",
     "print (res)\n",
     "\n",
+    "res = [re.findall('^\\s*(.*)\\s*$', i) for i in data]\n",
+    "print (res)\n",
+    "\n",
     "\n",
     "# print (res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -264,6 +354,31 @@
     "data = ['ftp://file_server.com:21/top_secret/life_changing_plans.pdf', 'https://regexone.com/lesson/introduction#section', 'file://localhost:4040/zip_file', 'https://s3cur3-server.com:9999/', 'market://search/angry%20birds']\n",
     "\n",
     "cor = [['ftp', 'file_server.com', '21'], ['https', 'regexone.com'], ['file', 'localhost', '4040'], ['https', 's3cur3-server.com', '9999'], ['market', 'search']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Problem from code_wars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# assert translate(\"hieeelalaooo\") == \"hello\", \"Hi!\"\n",
+    "    # assert translate(\"hoooowe yyyooouuu duoooiiine\") == \"how you doin\", \"Joey?\"\n",
+    "    # assert translate(\"aaa bo cy da eee fe\") == \"a b c d e f\", \"Alphabet\"\n",
+    "    # assert translate(\"sooooso aaaaaaaaa\") == \"sos aaa\", \"Mayday, mayday\"\n",
+    "    # print(\"Coding complete? Click 'Check' to review your tests and earn   cool rewards!\")\n",
+    "    "
    ]
   }
  ]
