--- a/re_practice.ipynb
+++ b/re_practice.ipynb
@@ -63,26 +63,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[], [], ['128'], [], [], [], [], [], []]\nind: 0, value: 1 not equal to 3.14529\n"
+     "text": "[[], [], [], [], [], [], [], [], []]\n"
     }
    ],
    "source": [
     "import re\n",
     "data = ['3.14529', '-255.34', '128', '+568.596', '1.9e10', '123,340.00', '720p', '123,340,567', '73p89']\n",
     "std_res = ['3.14529', '-255.34', '128', '+568.596', '1.9e10', '123,340.00', '123,340,567']\n",
-    "# res = [re.findall('(^[+-]?\\d+(,\\d+)*(\\.\\d+)*(e\\d+)*$)', i) for i in data]\n",
-    "res = [re.findall('(^[+-]?\\d+$)', i) for i in data]\n",
+    "\n",
+    "# # issue is find many other parts\n",
+    "# res_1 = [re.findall('(^[+-]?\\d+(,\\d+)*(\\.\\d+)*(e\\d+)*$)', i) for i in data]\n",
+    "\n",
+    "# want to find a pattern only with the exact string --- unresolved\n",
+    "res = [re.findall(\"(^[+-]?\\d+(,\\d+){1, 2}\\.\\d+)\", i) for i in data]\n",
     "print (res)\n",
-    "res = [r[0][0] for r in res if r]\n",
-    "for i, r in enumerate(res): \n",
-    "    if r == std_res[i]: print ('pass')\n",
-    "    else: print ('ind: {i}, value: {v} not equal to {ans}'.format(i = i, v = r, ans = std_res[i]))\n",
+    "# res = [r[0][0] for r in res_1 if r]\n",
+    "# for i, r in enumerate(res): \n",
+    "#     if r == std_res[i]: print ('pass')\n",
+    "#     else: print ('ind: {i}, value: {v} not equal to {ans}'.format(i = i, v = r, ans = std_res[i]))\n",
     "\n"
    ]
   },
@@ -120,7 +124,6 @@
     "data = ['415-555-1234', '650-555-2345', '(416)555-3456', '202 555 4567', '4035555678', '1 416 555 9292']\n",
     "cor = ['415', '605', '416', '202', '403', '416']\n",
     "\n",
-    "# a = re.compile('[(]?(\\d+)')\n",
     "res = [re.findall('[(]?(\\d+)', d) for d in data]\n",
     "\n",
     "\n",
@@ -140,18 +143,46 @@
     "\n",
     "- 将邮箱@前面的名字提取出来，如果提取出来的是有+的，将+之前的名字提取出来\n",
     "\n",
-    "- res = [re.findall('^([\\w\\.]*)', i) for i in data]"
+    "- res = [re.findall(`'^([\\w\\.]*)'`, i) for i in data]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-57-fcbfef379b1f>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-fcbfef379b1f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    思路：\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "思路：\n",
+    "\n",
+    "- ans 1\n",
+    "\n",
+    "    - 只包括 “字符” 及 “.” 并以此为开头的文字\n",
+    "\n",
+    "- ans 2\n",
+    "\n",
+    "    - 找文字用 \\w \n",
+    "\n",
+    "    - \\.? 表示不清楚这个有米有"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "pass\npass\npass\npass\npass\npass\npass\n"
+     "text": "[['tom'], ['tom.riddle'], ['tom.riddle'], ['tom'], ['potter'], ['harry'], ['hermione']]\npass\npass\npass\npass\npass\npass\npass\n"
     }
    ],
    "source": [
@@ -160,11 +191,15 @@
     "cor = ['tom', 'tom.riddle', 'tom.riddle', 'tom', 'potter', 'harry', 'hermione']\n",
     "\n",
     "# # ans 1\n",
-    "# res = [re.findall('^([\\w\\.]*)', i) for i in data]\n",
+    "# res = [re.findall('(^[\\w\\.]*)', i) for i in data]\n",
+    "# print (res)\n",
+    "# res = [r[0] for r in res]\n",
+    "# print (res)\n",
     "\n",
     "# ans 2\n",
-    "res = [re.findall('(.*?)(\\+.*)?@.*', i) for i in data]\n",
-    "res = [r[0][0] for r in res]\n",
+    "res = [re.findall('^\\w*\\.?\\w*', i) for i in data]\n",
+    "print (res)\n",
+    "res = [r[0] for r in res]\n",
     "\n",
     "for i, v in enumerate(res): \n",
     "    if v == cor[i]: print (\"pass\")\n",
@@ -366,18 +401,59 @@
    ]
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "目的：\n",
+    "\n",
+    "- 去掉辅音后的第一个元音 --- RemoveVowAfterCon\n",
+    "\n",
+    "- 将三个连续的元音 变成 一个元音 --- ReplaceThreeOrMore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Coding complete? Click 'Check' to review your tests and earn   cool rewards!\n"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def ReplaceThreeOrMore(s):\n",
+    "    # pattern to look for three or more repetitions of any character, including\n",
+    "    # newlines.\n",
+    "    # pattern = re.compile(r\"([aeioyu])\\1{2,}\", re.DOTALL) \n",
+    "    pattern = re.compile(r\"([aeioyu])\\1{2}\") \n",
+    "    return pattern.sub(r\"\\1\", s)\n",
+    "\n",
+    "def RemoveVowAfterCon(s): \n",
+    "    pattern = re.compile(r'(?<=[b-df-hj-np-tv-xz])[aeioyu]')\n",
+    "    # print (re.findall(pattern, s))\n",
+    "    return pattern.sub(r'', s)\n",
+    "\n",
+    "def translate(phrase):\n",
+    "    \n",
+    "    pre_deal = RemoveVowAfterCon(phrase)\n",
+    "    # print (pre_deal)\n",
+    "    pre_deal = ReplaceThreeOrMore(pre_deal)\n",
+    "\n",
+    "    # print (pre_deal)\n",
+    "    return pre_deal\n",
     "\n",
     "\n",
-    "# assert translate(\"hieeelalaooo\") == \"hello\", \"Hi!\"\n",
-    "    # assert translate(\"hoooowe yyyooouuu duoooiiine\") == \"how you doin\", \"Joey?\"\n",
-    "    # assert translate(\"aaa bo cy da eee fe\") == \"a b c d e f\", \"Alphabet\"\n",
-    "    # assert translate(\"sooooso aaaaaaaaa\") == \"sos aaa\", \"Mayday, mayday\"\n",
-    "    # print(\"Coding complete? Click 'Check' to review your tests and earn   cool rewards!\")\n",
+    "assert translate(\"hieeelalaooo\") == \"hello\", \"Hi!\"\n",
+    "assert translate(\"hoooowe yyyooouuu duoooiiine\") == \"how you doin\", \"Joey?\"\n",
+    "assert translate(\"aaa bo cy da eee fe\") == \"a b c d e f\", \"Alphabet\"\n",
+    "assert translate(\"sooooso aaaaaaaaa\") == \"sos aaa\", \"Mayday, mayday\"\n",
+    "print(\"Coding complete? Click 'Check' to review your tests and earn cool rewards!\")\n",
     "    "
    ]
   }
