--- a/re_practice.ipynb
+++ b/re_practice.ipynb
@@ -63,13 +63,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[], [], [], [], [], [], [], [], []]\n"
+     "text": "[['3.14529', ''], ['-255.34', ''], ['128', ''], ['+568.596', ''], ['1.9e10', ''], ['123,340.00', ''], ['720p', ''], ['123,340,567', ''], ['73p89', '']]\nind: 0, value: ['3.14529', ''] not equal to 3.14529\nind: 1, value: ['-255.34', ''] not equal to -255.34\nind: 2, value: ['128', ''] not equal to 128\nind: 3, value: ['+568.596', ''] not equal to +568.596\nind: 4, value: ['1.9e10', ''] not equal to 1.9e10\nind: 5, value: ['123,340.00', ''] not equal to 123,340.00\nind: 6, value: ['720p', ''] not equal to 123,340,567\n"
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-a945f83c586d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# res = [r[0][0] for r in res_1 if r]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mr\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mstd_res\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'pass'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'ind: {i}, value: {v} not equal to {ans}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstd_res\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
@@ -81,12 +92,15 @@
     "# res_1 = [re.findall('(^[+-]?\\d+(,\\d+)*(\\.\\d+)*(e\\d+)*$)', i) for i in data]\n",
     "\n",
     "# want to find a pattern only with the exact string --- unresolved\n",
-    "res = [re.findall(\"(^[+-]?\\d+(,\\d+){1, 2}\\.\\d+)\", i) for i in data]\n",
+    "res = [re.findall(\".*\", i) for i in data]\n",
     "print (res)\n",
     "# res = [r[0][0] for r in res_1 if r]\n",
-    "# for i, r in enumerate(res): \n",
-    "#     if r == std_res[i]: print ('pass')\n",
-    "#     else: print ('ind: {i}, value: {v} not equal to {ans}'.format(i = i, v = r, ans = std_res[i]))\n",
+    "for i, r in enumerate(res): \n",
+    "    if r == std_res[i]: print ('pass')\n",
+    "    else: print ('ind: {i}, value: {v} not equal to {ans}'.format(i = i, v = r, ans = std_res[i]))\n",
+    "\n",
+    "if i + 1 < len(cor): \n",
+    "    print ('several ans missing, after ans index {i}'.format(i = i + 1))\n",
     "\n"
    ]
   },
@@ -198,13 +212,15 @@
     "\n",
     "# ans 2\n",
     "res = [re.findall('^\\w*\\.?\\w*', i) for i in data]\n",
-    "print (res)\n",
+    "# print (res)\n",
     "res = [r[0] for r in res]\n",
     "\n",
     "for i, v in enumerate(res): \n",
     "    if v == cor[i]: print (\"pass\")\n",
     "    else: \n",
-    "        print ('ind: {i}, value: {v} not equal to {ans}'.format(i = i, v = v, ans = cor[i]))\n"
+    "        print ('ind: {i}, value: {v} not equal to {ans}'.format(i = i, v = v, ans = cor[i]))\n",
+    "if i + 1 < len(cor): \n",
+    "    print 'several ans missing, after ans index {i}'.format(i = i + 1)\n"
    ]
   },
   {
