--- a/re_practice.ipynb
+++ b/re_practice.ipynb
@@ -124,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[['415', '555', '1234'], ['650', '555', '2345'], ['416', '555', '3456'], ['202', '555', '4567'], ['4035555678'], ['1', '416', '555', '9292']]\n"
+     "text": "[['415', '555', '234'], ['650', '555', '2345'], ['416', '555', '3456'], ['202', '555', '4567'], ['4035555678'], ['1', '416', '555', '9292']]\n"
     }
    ],
    "source": [
@@ -138,7 +138,7 @@
     "data = ['415-555-1234', '650-555-2345', '(416)555-3456', '202 555 4567', '4035555678', '1 416 555 9292']\n",
     "cor = ['415', '605', '416', '202', '403', '416']\n",
     "\n",
-    "res = [re.findall('[(]?(\\d+)', d) for d in data]\n",
+    "res = [re.findall('[1(]?(\\d+)', d) for d in data]\n",
     "\n",
     "\n",
     "\n",
@@ -231,12 +231,12 @@
    "source": [
     "### Pro4. Matching HTML\n",
     "\n",
-    "- \\w will filter all the white space and the symbols"
+    "- \\w will filter all the white space and the symbols, (but will still remain the underscore _)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,12 @@
     "data = ['<a>This is a link</a>', \"<a href='https://regexone.com'>Link</a>\", \"<div class='test_style'>Test</div>\", \"<div>Hello <span>world</span></div>\"]\n",
     "cor = ['a', 'a', 'div', 'div']\n",
     "\n",
-    "res = [re.findall('^<(\\w*)', i) for i in data]\n",
+    "# # ans1\n",
+    "# res = [re.findall('^<(\\w*)', i) for i in data]\n",
+    "# print (res)\n",
+    "\n",
+    "# ans2\n",
+    "res = [re.findall('^<(\\w*).*?>', i) for i in data]\n",
     "print (res)"
    ]
   },
@@ -266,13 +271,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[], [], [], [('updated_img0912', 'png')], [], [('favicon', 'gif')], [], []]\n"
+     "text": "[[], [], [('img0912', 'jpg')], [('updated_img0912', 'png')], [], [('favicon', 'gif')], [('img0912', 'jpg')], []]\n"
     }
    ],
    "source": [
@@ -281,9 +286,13 @@
     "data = ['.bash_profile', 'workspace.doc', 'img0912.jpg', 'updated_img0912.png', 'documentation.html', 'favicon.gif', 'img0912.jpg.tmp', 'access.lock']\n",
     "\n",
     "cor = [['img0912', 'jpg'], ['updated_img0912', 'png'], ['favicon', 'gif']]\n",
+    "# # ans 1 & 2\n",
+    "# res = [re.findall('(.*).(jpg)$|(.*).(gif)$|(.*).(png)$', i) for i in data]\n",
+    "# res = [re.findall('(.*)\\.(.*[pg][ni][gf])$', i) for i in data]\n",
+    "# print (res)\n",
     "\n",
-    "res = [re.findall('(.*).(jpg)$|(.*).(gif)$|(.*).(png)$', i) for i in data]\n",
-    "res = [re.findall('(.*)\\.(.*[pg][ni][gf])$', i) for i in data]\n",
+    "# ans 3\n",
+    "res = [re.findall('(\\w+)\\.([jpg][pni][gf])', i) for i in data]\n",
     "print (res)"
    ]
   },
