update for some func

--- a/deal_img/deal_img.ipynb
+++ b/deal_img/deal_img.ipynb
@@ -43,20 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
     "\n",
-    "planeIm = Image.open('silken.png')\n",
+    "planeIm = Image.open('silken_ch.jpeg')\n",
     "planeIm = planeIm.convert('RGBA')\n",
     "datas = planeIm.getdata()\n",
     "\n",
     "newData = []\n",
     "for item in datas:\n",
     "    # if item[0] > 240 and item[1] > 240 and item[2] > 240:\n",
-    "    if item[0] > 150 and item[1] > 150 and item[2] > 150:    \n",
+    "    if item[0] > 80 and item[1] > 80 and item[2] > 80:    \n",
     "        newData.append((255, 255, 255, 0)) # transparent pixel\n",
     "    else:\n",
     "        newData.append(item) # unedited pixel, can change the character color\n",
