update the long leg information.

--- a/deal_img/deal_img.ipynb
+++ b/deal_img/deal_img.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.6.5-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python36564bitff28b0bc308b43728a982148efad7fb6",
-   "display_name": "Python 3.6.5 64-bit"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -43,26 +20,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
     "\n",
-    "planeIm = Image.open('silken_ch.jpeg')\n",
-    "planeIm = planeIm.convert('RGBA')\n",
+    "planeIm = Image.open('ballet_bes.png')\n",
+    "# planeIm = planeIm.convert('RGBA')\n",
     "datas = planeIm.getdata()\n",
     "\n",
     "newData = []\n",
     "for item in datas:\n",
     "    # if item[0] > 240 and item[1] > 240 and item[2] > 240:\n",
-    "    if item[0] > 80 and item[1] > 80 and item[2] > 80:    \n",
+    "    if item[0] > 150 and item[1] > 150 and item[2] > 150:    # 80\n",
     "        newData.append((255, 255, 255, 0)) # transparent pixel\n",
     "    else:\n",
     "        newData.append(item) # unedited pixel, can change the character color\n",
+    "        # newData.append((0, 0, 0, 255)) \n",
     "planeIm.putdata(newData)\n",
-    "planeIm.save('output.png', \"PNG\")"
+    "planeIm.save('ballet_bes_1.png', \"PNG\")"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.6.5-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python36564bitff28b0bc308b43728a982148efad7fb6",
+   "display_name": "Python 3.6.5 64-bit"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
